--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,16 @@
 <body>
 <div id="page">
     <header class="main" id="mainHeader">
+
+        <div class="right">
+            <% if (!locals.loginUser) { %>
+                <a href="/login">Login</a>
+            <% } else { %>
+                <a href="/users/<%= loginUser.id %>"><%= loginUser.username %></a>
+                <a href="/login?_method=DELETE">Logout</a>
+            <% } %>
+        </div>
+
         <h1><span class="no-narrow">The</span> Quiz <span class="no-narrow">Site</span></h1>
     </header>
 
