--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -15,14 +15,16 @@
 
 </ul>
 
-<p>
-    <% if (user.isLocal) { %>
+<% if (locals.loginUser && (locals.loginUser.isAdmin || locals.loginUser.id === user.id)) { %>
+    <p>
+        <% if (user.isLocal) { %>
         <a href="/users/<%= user.id %>/edit" class="button">Edit</a>
     <% } %>
 
-    <a href="/users/<%= user.id %>?_method=DELETE"
-       onClick="return confirm('Delete user: <%= user.displayName %>');"
-       class="button">Delete</a>
-</p>
+        <a href="/users/<%= user.id %>?_method=DELETE"
+           onClick="return confirm('Delete user: <%= user.displayName %>');"
+           class="button">Delete</a>
+    </p>
+<% } %>
 
 <a href="/goback" class="button">Go back</a>
