--- a/views/quizzes/play.ejs
+++ b/views/quizzes/play.ejs
@@ -19,4 +19,16 @@
     </div>
 </form>
 
+
+<h1>
+    Tips:
+</h1>
+
+<% include ../tips/_index %>
+
+<% if (locals.loginUser) { %>
+    <% include ../tips/_new %>
+<% } %>
+
+
 <a href="/goback" class="button">Go back</a>
