--- a/views/quizzes/show.ejs
+++ b/views/quizzes/show.ejs
@@ -1,15 +1,23 @@
 
-<div class="right">
-    <small> (by <%= quiz.author ? quiz.author.username : "Anonymous" %>) </small>
-</div>
-
 <h1>
     Show Quiz:
 </h1>
 
-<ul>
-    <li>Question: <b><%= quiz.question %></b></li>
-    <li>Answer: <b><%= quiz.answer %></b></li>
-</ul>
+<div class="quizItem">
+
+    <div>
+        <% var attachment = quiz.attachment; %>
+        <% include ../attachments/_show %>
+    </div>
+
+    <div>
+        Question: <b><%= quiz.question %></b>
+        <br />
+        Answer: <b><%= quiz.answer %></b>
+        <br />
+        <small> by <%= quiz.author ? quiz.author.username : "Anonymous" %> </small>
+    </div>
+
+</div>
 
 <a href="/goback" class="button">Go back</a>
