--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,6 +71,11 @@ a.button:hover {
   float: right;
 }
 
+.stars {
+  float: left;
+  clear: both;
+}
+
 /* ------------------------- */
 
 .wideRow {
