--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -2,27 +2,35 @@
     Users
 </h1>
 
-<table>
+<table id="usersIndex">
     <% for (var i in users) { %>
         <tr>
             <td>
-                <a href="/users/<%= users[i].id %>" ><%= users[i].username %></a>
+                <% if (users[i].photo) { %>
+                    <img src="<%= users[i].photo.url %>" width="100px"/>
+                <% } else { %>
+                    <img src="/images/face.png" width="100px"/>
+                <% } %>
+            </td>
+
+            <td>
+                <a href="/users/<%= users[i].id %>"><%= users[i].username %></a>
+                <br/>
                 <%= users[i].isAdmin ? "(admin)" : "" %>
             </td>
 
-            <% if (locals.loginUser && (locals.loginUser.isAdmin || locals.loginUser.id === users[i].id)) { %>
-                <td>
+            <td>
+                <% if (locals.loginUser && (locals.loginUser.isAdmin || locals.loginUser.id === users[i].id)) { %>
                     <a href="/users/<%= users[i].id %>/edit" class="button">Edit</a>
-                </td>
 
-                <td>
                     <a href="/users/<%= users[i].id %>?_method=DELETE"
                        onClick="return confirm('Delete user: <%= users[i].username %>');"
                        class="button">Delete</a>
-                </td>
-            <% } %>
+                <% } %>
+            </td>
+
         </tr>
-    <%  } %>
+    <% } %>
 </table>
 
 <% if (locals.loginUser && locals.loginUser.isAdmin) { %>
