--- a/views/session/new.ejs
+++ b/views/session/new.ejs
@@ -1,5 +1,9 @@
 
 <div>
+    <a href="/auth/github">Login with GitHub</a>
+</div>
+
+<div>
     <a href="/users/new">Register local account</a>
 </div>
 
