--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -6,15 +6,22 @@
     <% for (var i in users) { %>
         <tr>
             <td>
-                <a href="/users/<%= users[i].id %>" ><%= users[i].username %></a>
+                <a href="/users/<%= users[i].id %>" ><%= users[i].displayName %></a>
+            </td>
+            <td>
+                <%= users[i].githubId ? "Github" : "Local" %>
+            </td>
+            <td>
                 <%= users[i].isAdmin ? "(admin)" : "" %>
             </td>
             <td>
-                <a href="/users/<%= users[i].id %>/edit" class="button">Edit</a>
+                <% if (users[i].isLocal) { %>
+                    <a href="/users/<%= users[i].id %>/edit" class="button">Edit</a>
+                <% } %>
             </td>
             <td>
                 <a href="/users/<%= users[i].id %>?_method=DELETE"
-                   onClick="return confirm('Delete user: <%= users[i].username %>');"
+                   onClick="return confirm('Delete user: <%= users[i].displayName %>');"
                    class="button">Delete</a>
             </td>
         </tr>
